@@ -436,7 +436,7 @@ class Workflow extends Entity {
    * @todo 1: this is not robust: 1 Item has 1 Workflow; 1 Workflow may have N Items (fields)
    * @todo 2: find other solution.
    */
-  public function getWorkflowItem(WorkflowItem $item = NULL) {
+  public function getWorkflowItem(WorkflowItem $item = NULL, $entity_type = '', $entity_bundle = '', $field_name = '') {
     if ($item) {
       $this->item = $item;
     }
@@ -446,21 +446,26 @@ class Workflow extends Entity {
       $workflow = &$this;
 
       $field = array();
-      $field['field_name'] = '';
-      $field['id'] = 0;
-      $field['settings']['wid'] = $workflow->wid;
-      $field['settings']['widget'] = $workflow->options;
-      // Add default values.
-      $field['settings']['widget'] += array(
-        'name_as_title' => TRUE,
-        'options' => 'radios',
-        'schedule' => TRUE,
-        'schedule_timezone' => TRUE,
-        'comment_log_node' => TRUE,
-        'comment_log_tab' => TRUE,
-        'watchdog_log' => TRUE,
-        'history_tab_show' => TRUE,
-      );
+      if ($field_name) {
+        $field = field_info_field($field_name);
+      }
+      else {
+        $field['field_name'] = '';
+        $field['id'] = 0;
+        $field['settings']['wid'] = $workflow->wid;
+        $field['settings']['widget'] = $workflow->options;
+        // Add default values.
+        $field['settings']['widget'] += array(
+          'name_as_title' => TRUE,
+          'options' => 'radios',
+          'schedule' => TRUE,
+          'schedule_timezone' => TRUE,
+          'comment_log_node' => TRUE,
+          'comment_log_tab' => TRUE,
+          'watchdog_log' => TRUE,
+          'history_tab_show' => TRUE,
+        );
+      }
 
       $instance = array();
 
